--- a/themes/hexo-theme-next-5.1.1/_config.yml
+++ b/themes/hexo-theme-next-5.1.1/_config.yml
@@ -17,7 +17,7 @@ rss:
 #since: 2015
 
 # icon between year and author @Footer
-authoricon: heart
+authoricon: Albert
 
 # Footer `powered-by` and `theme-info` copyright
 copyright: true
